# Importing-Incomplete-Types-ObjC-Types-to-Swift-Demo

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  foo-bar-consumer.h  foo-bar-consumer.m  foo-bar.h  foo-bar.m  foo-consumer.h  foo-consumer.m  foo.h  foo.m  module.modulemap  moduleA-headerA.h  moduleA-headerB.h  moduleA-implementationA.m  moduleB-headerA.h  moduleB-implementationA.m  objc-client.m  swift-client-complete.swift  swift-client-fwd-declared.swift  swift-client.swift
